skip version check for arduino-esp32 in CI
arduino-esp32 does not officially support ESP-IDF v5 yet (see https://github.com/espressif/arduino-esp32/blob/master/CMakeLists.txt#L8-L9).

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           - mpd_status
           - terminal
           - www-image
-          
+
     continue-on-error: ${{ matrix.version == 'latest' }}
 
     steps:
@@ -40,6 +40,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: "espressif/idf:${{ matrix.version }}"
+    env:
+      ARDUINO_SKIP_IDF_VERSION_CHECK: 1
     strategy:
       fail-fast: false
       matrix:
@@ -53,7 +55,7 @@ jobs:
             arduino-esp32: 2.0.3
           - version: latest
             arduino-esp32: master
-          
+
 
     steps:
       - name: Install latest git
